# Example_BLDC_FOC

./: .gitmodules  CMakeLists.txt  README.md  openocd.sh  vbcore_bldc_6step.ioc  vbcore_bldc_foc.ioc
App/: app.cpp  common.cpp  communications.cpp
Inc/: main.h  stm32g4xx_it.h
Src/: dma.c  gpio.c  main.c  spi.c  stm32g4xx_it.c
_vscode/: init.cmake  launch.json  settings.json  tasks.json
cmake/stm32cubemx/: CMakeLists.txt
scripts/: openocd.sh  program.py
